2012-11-14  Simon Fraser  <simon.fraser@apple.com>

        Don't use temporary clip rects when hit testing
        https://bugs.webkit.org/show_bug.cgi?id=102329

        Reviewed by Beth Dakin.

        We now cache clip rects separately for painting, hit testing etc. Hit testing
        clip rects are always shrunk to exclude scrollbars (so that hit testing on
        the scrollbars works), so we no longer every need to use temporary clip rects
        during hit testing.

        Added an assertion that the scrollbar relevancy when we computed the clip rects
        is the same as that when using them.
        
        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::hitTestLayer):
        (WebCore::RenderLayer::updateClipRects):
        * rendering/RenderLayer.h:
        (WebCore::ClipRectsCache::ClipRectsCache):
        (ClipRectsCache):

2012-11-14  Dirk Schulze  <krit@webkit.org>

        Support animation of basic shape 'polygon'
        https://bugs.webkit.org/show_bug.cgi?id=102080

        Reviewed by Daniel Bates.

        The basic shapes 'circle', 'rectangle' and 'ellipse' are animatable with the committed
        patch http://trac.webkit.org/changeset/134352.
        This is a follow-up patch to make 'polygon' animatable as well, as long as the number
        of vertices between start and end polygon is the same.

        Added polygon animation test to existing test:
            fast/exclusions/shape-inside/shape-inside-animation.html
            css3/masking/clip-path-animation.html

        * page/animation/CSSPropertyAnimation.cpp: Forgot to add copyright with last commits.
        * rendering/style/BasicShapes.cpp:
        (WebCore::BasicShape::canBlend): Polygons are allowed now.
        (WebCore::BasicShapePolygon::blend): Interpolate polygon shapes.

2012-11-14  Kentaro Hara  <haraken@chromium.org>

        Unreviewed. Fix code generator warnings.

        * bindings/scripts/CodeGeneratorV8.pm:
        (GenerateFunctionCallback):